--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,7 @@
+
+
+
+
 .header{
     transition: all 0.5s;
     z-index: 997;
@@ -7,7 +11,9 @@
     padding-left: 20px;
 }
 
-.header .toggle-siderbar-btn{
+
+
+.header .toggle-sidebar-btn{
     font-size: 32px;
     padding-left: 10px;
     cursor: pointer;
