--- a/src/views/HomePage/homePage.css
+++ b/src/views/HomePage/homePage.css
@@ -48,7 +48,7 @@ h1,h2,h3,h4,h5,h6{
   box-shadow: 0 5px 30px 0 rgba(82, 63, 105, 0.2);
 }
 
-.dropdown-menu .dropdown-header
+.dropdown-menu .dropdown-header,
 .dropdown-menu .dropdown-footer{
   text-align: center;
   font-size: 15px;
@@ -97,6 +97,18 @@ h1,h2,h3,h4,h5,h6{
     transform: rotate(45deg);
     border-top: 1px solid #eaedf1;
     border-left: 1px solid #eaedf1;
+  }
+}
+
+@-webkit-keyframes dropdown-animate {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  0% {
+    opacity: 0;
   }
 }
 
