--- a/src/components/header/logo/logo.css
+++ b/src/components/header/logo/logo.css
@@ -4,6 +4,7 @@
 
 .logo{
     line-height: 1;
+     text-decoration: none;
 }
 
 @media(min-width:1200px){
@@ -22,4 +23,5 @@
     font-weight: 700;
     color: #012970;
     font-family: 'Nunito', sans-serif;
+   
 }
