config module login.css again

--- a/src/views/loginPage/loginPage.module.css
+++ b/src/views/loginPage/loginPage.module.css
@@ -1,10 +1,9 @@
-*{
+.loginContainer * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-body{
+.loginContainer{
     font-family: 'Nunito', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
