--- a/src/components/LoginForm/loginForm.css
+++ b/src/components/LoginForm/loginForm.css
@@ -1,5 +1,6 @@
 .wrapper{
     width: 420px;
+    height: 400px;
     background-color: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     box-shadow: 0 0 10px rgba(255, 255, 255, .2);
@@ -12,6 +13,7 @@
 .wrapper h1 {
     font-size: 36px;
     text-align: center;
+    font-weight: bold;
 }
 .wrapper .input-box{
     position: relative;
@@ -55,4 +57,8 @@
     font-size: 16px;
     color: #333;
     font-weight: 700;
+}
+
+.wrapper form{
+    padding: 20px;
 }
