--- a/src/views/HomePage/homePage.css
+++ b/src/views/HomePage/homePage.css
@@ -124,3 +124,10 @@ h1,h2,h3,h4,h5,h6{
     opacity: 0;
   }
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+}
