--- a/src/views/HomePage/homePage.css
+++ b/src/views/HomePage/homePage.css
@@ -131,3 +131,23 @@ h1,h2,h3,h4,h5,h6{
     align-items: center;
     height: 100vh; 
 }
+/* hieu ung chuyen main  */
+
+.fade-enter {
+    opacity: 0;
+    transform: scale(0.9);
+}
+.fade-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms, transform 300ms;
+}
+.fade-exit {
+    opacity: 1;
+    transform: scale(1);
+}
+.fade-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 300ms, transform 300ms;
+}
