create search user

--- a/src/components/Main/pageTitle/pageTitle.css
+++ b/src/components/Main/pageTitle/pageTitle.css
@@ -7,4 +7,6 @@
     margin-bottom: 0px;
     font-weight: 600;
     color: #012970;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
 }
