--- a/src/components/Main/mainTour/mainTour.css
+++ b/src/components/Main/mainTour/mainTour.css
@@ -1,4 +1,4 @@
-#mainUser{
+#main{
     margin-top: 60px;
     padding: 20px 30px;
     transition: all 0.3s;
@@ -8,7 +8,7 @@
 }
 
 @media (max-width: 1199px) {
-    #mainUser{
+    #main{
         padding: 20px;
     }
 }
