--- a/src/components/Main/mainTour/mainTour.css
+++ b/src/components/Main/mainTour/mainTour.css
@@ -1,4 +1,4 @@
-#main{
+#main-tour{
     margin-top: 60px;
     padding: 20px 30px;
     transition: all 0.3s;
@@ -8,7 +8,50 @@
 }
 
 @media (max-width: 1199px) {
-    #main{
+    #main-tour{
         padding: 20px;
+    }
+}
+/* mainTour.css */
+
+/* Container chính */
+.main-tour {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+/* Hiệu ứng trượt vào */
+.slide-in {
+    animation: slideIn 0.3s forwards;
+}
+
+/* Hiệu ứng trượt ra */
+.slide-out {
+    animation: slideOut 0.3s forwards;
+}
+
+/* Keyframes cho hiệu ứng trượt vào */
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/* Keyframes cho hiệu ứng trượt ra */
+@keyframes slideOut {
+    from {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    to {
+        transform: translateX(-100%);
+        opacity: 0;
     }
 }
